--- a/ws.css
+++ b/ws.css
@@ -1,7 +1,7 @@
 .main{
      background-color:#e6faff;
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-     height:100vh;
+     height:100%;
      padding-top:10vh;
      padding-left:30vw;
      padding-right:6vw;
